@@ -1,3 +1,7 @@
+2004-09-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gcc-lib-path.m4: New file.
+
 2004-09-22  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* gettext-sister.m4: Renamed from gettext.m4
